Fix alert icon not showing correctly

--- a/src/chrome/mozapps/extensions/extensions.css
+++ b/src/chrome/mozapps/extensions/extensions.css
@@ -80,14 +80,16 @@
 /*** notification icons ***/
 
 .warning-icon {
-  list-style-image: url("chrome://mozapps/skin/extensions/alerticon-warning.png");
+  list-style-image: none;
+  background: url("chrome://mozapps/skin/extensions/alerticon-warning.png") center no-repeat;
   width: 16px;
   height: 15px;
   margin: 3px 0;
 }
 
 .error-icon {
-  list-style-image: url("chrome://mozapps/skin/extensions/alerticon-error.png");
+  list-style-image: none;
+  background: url("chrome://mozapps/skin/extensions/alerticon-error.png") center no-repeat;
   width: 16px;
   height: 15px;
   margin: 3px 0;
@@ -95,7 +97,8 @@
 
 .pending-icon,
 .info-icon {
-  list-style-image: url("chrome://mozapps/skin/extensions/alerticon-info-positive.png");
+  list-style-image: none;
+  background: url("chrome://mozapps/skin/extensions/alerticon-info-positive.png") center no-repeat;
   width: 16px;
   height: 15px;
   margin: 3px 0;
@@ -103,7 +106,8 @@
 
 .addon-view[pending="disable"] .pending-icon,
 .addon-view[pending="uninstall"] .pending-icon {
-  list-style-image: url("chrome://mozapps/skin/extensions/alerticon-info-negative.png");
+  list-style-image: none;
+  background: url("chrome://mozapps/skin/extensions/alerticon-info-negative.png") center no-repeat;
   width: 16px;
   height: 15px;
   margin: 3px 0;
